fix: reset layout issue

--- a/components/input/inputWithLabel/index.module.scss
+++ b/components/input/inputWithLabel/index.module.scss
@@ -28,7 +28,7 @@
   }
   .afterContent {
     position: relative;
-    top: -37px;
+    top: -39px;
     right: 20px;
 
     align-self: flex-end;
